Add entities related to the inventory.

--- a/toko/src/main/resources/application.properties
+++ b/toko/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+# Database
+spring.datasource.url= jdbc:postgresql://localhost:5432/toko_db
+spring.datasource.username= postgres
+spring.datasource.password= postgres
+
+spring.jpa.hibernate.ddl-auto= create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Server
+server.port = 3000
+
