--- a/toko/src/main/resources/application.properties
+++ b/toko/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Server
 server.port = 3000
 
+#Open API
+
+
+#Actuator
+springdoc.show-actuator=true
