Category Service and Controller

--- a/toko/src/main/resources/application.properties
+++ b/toko/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port = 3000
 
 #Open API
-
+springdoc.swagger-ui.operations-sorter = true
 
 #Actuator
 springdoc.show-actuator=true
