Add Category Data

--- a/toko/src/main/resources/application.properties
+++ b/toko/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/toko_db
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
