Finish Category API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic",
-    "java.compile.nullAnalysis.mode": "automatic",
-    "cSpell.words": [
-        "toko"
-    ]
+    "java.compile.nullAnalysis.mode": "automatic"
 }
