--- a/toko/src/main/resources/application.properties
+++ b/toko/src/main/resources/application.properties
@@ -18,8 +18,8 @@ springdoc.swagger-ui.operations-sorter = true
 #Actuator
 springdoc.show-actuator=true
 
-spring.servlet.multipart.max-file-size=5000KB
-spring.servlet.multipart.max-request-size=5000KB
+spring.servlet.multipart.max-file-size=50000KB
+spring.servlet.multipart.max-request-size=50000KB
 spring.devtools.restart.additional-exclude= upload/**
 
 # INTERNATIONALIZATION 
