--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "DockerRun.DisableAutoGenerateConfig": true,
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
