--- a/toko/src/main/resources/application.properties
+++ b/toko/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # Database
-spring.datasource.url= jdbc:postgresql://localhost:5432/toko_db
+spring.datasource.url= jdbc:postgresql://localhost:5432/test
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 
